# word_2_vec

./: .gitignore  README.md  pyproject.toml  requirements-lock.txt  requirements-notebook.txt  requirements.txt
configs/: graph_classification.yaml  node_classification.yaml
docs/: architecture.md  environment.md  index.md  matching.md  walkthrough.md
examples/: end_to_end_classification.py  matching_workflow.py  quickstart.py
notebooks/: graph_to_vec_walkthrough.ipynb  matching_walkthrough.ipynb
src/graph_to_vec/: __init__.py  adapters.py  cli.py  embeddings.py  matching.py  models.py  persistence.py  pipeline.py  query.py  registry.py  schema.py  trainers.py
tests/: test_adapters.py  test_cli.py  test_embeddings_pipeline.py  test_matching_query.py  test_models_trainers.py  test_persistence_registry.py
