[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "graph-to-vec"
version = "0.1.0"
description = "Graph-to-vector classification framework for heterogeneous graphs and knowledge-graph-shaped data."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Graph To Vec Contributors" }
]
dependencies = [
  "joblib>=1.3",
  "networkx>=3.0",
  "numpy>=1.24",
  "pandas>=2.0",
  "pydantic>=2.0",
  "pyyaml>=6.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "torch>=2.3",
  "torch-geometric>=2.5",
  "tqdm>=4.66",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.8",
]

[project.scripts]
g2v = "graph_to_vec.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/graph_to_vec"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
